package tech.harrynull.galleryneo.proto;

message User {
  optional string name = 1;
}

message LoginRequest {
  optional string name = 1;
  optional string password = 2;
}

message RegisterRequest {
  optional string name = 1;
  optional string password = 2;
}

message LoginOrRegisterResponse {
  optional bool isSuccessful = 1;
  optional User user = 2;
  optional string failMessage = 3;
}
